chore: update to v0.2.4

--- a/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
+++ b/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
@@ -92,6 +92,7 @@ Of course, you may want more than just the basics. If you're looking to add feat
         <link rel="stylesheet" href="https://unpkg.com/@univerjs/umd/lib/univer.css">
 
         <script src="https://unpkg.com/lodash/lodash.js"></script>
+        <script> window.lodash = _ </script>
 
         <script src="https://unpkg.com/@univerjs-pro/collaboration/lib/umd/index.js"></script>
         <script src="https://unpkg.com/@univerjs-pro/collaboration-client/lib/umd/index.js"></script>
@@ -195,7 +196,8 @@ Of course, you may want more than just the basics. If you're looking to add feat
               UniverSheetsNumfmt,
               UniverCollaboration,
               UniverCollaborationClient,
-              UniverSheetsThreadComment
+              UniverSheetsThreadComment,
+              UniverSheetsFormula: { UniverSheetsFormulaPlugin },
             } = window
 
             var univer = new UniverCore.Univer({
@@ -212,17 +214,18 @@ Of course, you may want more than just the basics. If you're looking to add feat
                 [UniverCore.IUndoRedoService, null]
               ]
             });
+            univer.registerPlugin(UniverDocs.UniverDocsPlugin, {
+              hasScroll: false,
+            });
 
             univer.registerPlugin(UniverEngineRender.UniverRenderEnginePlugin);
             univer.registerPlugin(UniverEngineFormula.UniverFormulaEnginePlugin);
+            univer.registerPlugin(UniverSheetsFormulaPlugin);
 
             univer.registerPlugin(UniverUi.UniverUIPlugin, {
               container: "app",
             });
 
-            univer.registerPlugin(UniverDocs.UniverDocsPlugin, {
-              hasScroll: false,
-            });
             univer.registerPlugin(UniverDocsUi.UniverDocsUIPlugin);
 
             univer.registerPlugin(UniverSheets.UniverSheetsPlugin);
