docs: add Offline Deployment

--- a/src/docs/guides/general/server/docker.en-US.mdx
+++ b/src/docs/guides/general/server/docker.en-US.mdx
@@ -50,6 +50,34 @@ Default ports for Univer services are listed below:
 | univer-minio | 9000 | Acts as the S3 storage server |
 | univer-client | 3010 | Provides the frontend interface |
 
+## Offline Deployment <a id="offline-deployment"></a>
+
+If you need to deploy in an offline environment, we also provide an offline installation package. However, we recommend using the one-click installation script in a networked environment for easier updates.
+
+1. [Click here to download the offline installation package](/releases/univer-server/download) and extract it on your server.
+
+```bash
+tar -xvf installation-package.tar.gz # Replace 'installation-package' with the actual file name
+```
+
+2. Navigate to the extracted directory and run `bash install.sh` to start the service.
+
+3. To uninstall:
+
+```bash
+bash uninstall.sh       # Uninstall while retaining data for future use
+bash uninstall.sh clean # Uninstall and delete data
+```
+
+4. Verify that the service is available.
+
+Method 1: Start the built-in demo application and visit `http://localhost:3010` to see the results.
+```bash
+docker run --net=univer-prod --rm --name univer-collaboration-lite -p 3010:3010 univer-acr-registry.cn-shenzhen.cr.aliyuncs.com/release/univer-collaboration-lite:latest
+```
+
+Method 2: Set up your own front-end project. [Learn more](/guides/sheet/getting-started/quickstart#install-and-run-the-frontend).
+
 ## Troubleshooting
 
 ### Having trouble starting on a Windows OS?
