--- a/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
+++ b/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
@@ -49,7 +49,7 @@ Of course, you may want more than just the basics. If you're looking to add feat
   sh -c "$(curl -fsSL https://release-univer.oss-cn-shenzhen.aliyuncs.com/release-demo/install.sh)"
   ```
 
-  ### Install and Run the Frontend
+  ### Install and Run the Frontend <a id="install-and-run-the-frontend"></a>
 
   <Tabs items={['pnpm', 'npm', 'Without package manager']}>
     <Tabs.Tab label="pnpm">
