--- a/src/docs/guides/sheet/getting-started/quickstart.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/quickstart.zh-CN.mdx
@@ -49,7 +49,7 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
   sh -c "$(curl -fsSL https://release-univer.oss-cn-shenzhen.aliyuncs.com/release-demo/install.sh)"
   ```
 
-  ### 安装并运行前端
+  ### 安装并运行前端 <a id="install-and-run-the-frontend"></a>
 
   <Tabs items={['pnpm', 'npm', '不使用包管理工具']}>
     <Tabs.Tab label="pnpm">
