fix(docker): fix link on Chinese mode

--- a/src/docs/guides/general/server/docker.en-US.mdx
+++ b/src/docs/guides/general/server/docker.en-US.mdx
@@ -54,7 +54,7 @@ Default ports for Univer services are listed below:
 
 If you need to deploy in an offline environment, we also provide an offline installation package. However, we recommend using the one-click installation script in a networked environment for easier updates.
 
-1. [Click here to download the offline installation package](/releases/univer-server/download) and extract it on your server.
+1. [Click here to download the offline installation package](https://univer.ai/releases/univer-server/download) and extract it on your server.
 
 ```bash
 tar -xvf installation-package.tar.gz # Replace 'installation-package' with the actual file name
