--- a/src/docs/guides/general/server/docker.zh-CN.mdx
+++ b/src/docs/guides/general/server/docker.zh-CN.mdx
@@ -53,7 +53,7 @@ Univer 服务默认端口如下：
 
 如果你恰好需要在无互联网环境下部署，我们也提供了离线安装包，条件允许我们建议你在有网络环境使用一键安装脚本进行部署，这样便于后续升级。
 
-1. [点击链接下载离线安装包](/releases/univer-server/download)，将安装包解压到服务器。
+1. [点击链接下载离线安装包](https://univer.ai/releases/univer-server/download)，将安装包解压到服务器。
 
 ```bash
 tar -xvf 安装包.tar.gz # 解压命令，将文件名替换为实际文件名
