--- a/src/docs/guides/sheet/features/permission.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/permission.zh-CN.mdx
@@ -178,8 +178,7 @@ class ConsumeService {
 下面是一个简单的示例：
 
 ```typescript
-import { IAuthzIoService, Univer } from '@univerjs/core';
-import { Injector } from '@wendellhu/redi';
+import { IAuthzIoService, Injector, Univer } from '@univerjs/core';
 
 class YourAuthzService implements IAuthzIoService { }
 
