--- a/src/docs/guides/sheet/tutorials/csv-import-plugin.en-US.mdx
+++ b/src/docs/guides/sheet/tutorials/csv-import-plugin.en-US.mdx
@@ -47,8 +47,7 @@ You can follow this article to practice together. We will develop based on the [
 We create the `ImportCSVButton.ts` file in the `src/plugins` directory, the code is as follows:
 
 ```typescript
-import { Plugin, Univer } from '@univerjs/core'
-import { Inject, Injector } from '@wendellhu/redi'
+import { Plugin, Inject, Injector, Univer } from '@univerjs/core'
 
 /**
  * Import CSV Button Plugin
