--- a/src/docs/guides/sheet/tutorials/csv-import-plugin.zh-CN.mdx
+++ b/src/docs/guides/sheet/tutorials/csv-import-plugin.zh-CN.mdx
@@ -47,8 +47,7 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 我们在 `src/plugins` 目录下创建 `ImportCSVButton.ts` 文件，代码如下：
 
 ```typescript
-import { Plugin, Univer } from '@univerjs/core'
-import { Inject, Injector } from '@wendellhu/redi'
+import { Plugin, Inject, Injector, Univer } from '@univerjs/core'
 
 /**
  * Import CSV Button Plugin
