--- a/src/docs/guides/general/server/usip.zh-CN.mdx
+++ b/src/docs/guides/general/server/usip.zh-CN.mdx
@@ -1,6 +1,6 @@
 # USIP 介绍
 
-USIP: Univer Server Integration Protocol，
+USIP: Univer Server Integration Protocol (Univer 服务集成协议) ，
 
 术语表
 
@@ -13,15 +13,15 @@ Univer Server 基于这一系列协议可以访问第三方系统，以获得客
 
 这样一来，在保证数据依然保留在第三方客户系统内部的同时，Univer Server 也可以成功集成进客户系统。
 
-![relationship](./usip/AzQSbQDVuoKkRZxrRPqcHtF0nsh.png)
-![api call flowchart](./usip/NdzmbFpnio4mQexalKBcw7Hwnmf.png)
+![relationship](./usip/usip-relationship.png)
+![api call flowchart](./usip/usip-flowchart.png)
 
-# 前提
+## 前提
 
 1. 集成方需要自己维护 用户 - 文档 之间的关系，univer server 作为客户端通过接口获取文档下的用户权限
 2. 实现：调用 univer server 创建文档成功后，会返回一个 `unitID` 文档 id，集成方需要对其进行存储，以实现自己的文件管理业务
 
-# **需要实现的接口**
+## **需要实现的接口**
 
 1. Credential verify: 验证用户身份合法性 (AuthN)
 
@@ -121,7 +121,7 @@ curl -X GET "http://localhost:8080/collaborators?unitIDs=AA&unitIDs=xx"
 }
 ```
 
-# Univer server 服务配置
+## Univer server 服务配置
 
 需要将上述接口地址配置到 docker-compose 目录下的 `.env` 文件，开启 USIP 功能，重启服务
 
@@ -134,6 +134,6 @@ USIP_URI_ROLE=http://localhost:8080/role
 USIP_URI_COLLABORATORS=http://localhost:8080/collaborators
 ```
 
-# 代码例子
+## 代码例子
 
 可查看 [usip-example](https://github.com/dream-num/usip-example)
